<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="Our logo"
        android:layout_marginBottom="40dp"
        />




    <TextView
        android:id="@+id/current"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/show_current_gpx"
        />

    <TextView
        android:id="@+id/avg"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/show_my_avg"
        />

    <TextView
        android:id="@+id/t_avg"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/show_total_avg"
        />




</androidx.appcompat.widget.LinearLayoutCompat>