<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:src="@drawable/logo"/>



    <Button
        android:id="@+id/choose_gpx"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="@string/choose_file"
        android:textColor="@color/white"
        android:layout_marginBottom="40dp"
        />


    <Button
        android:id="@+id/send_to_server"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="@string/send_to_server"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/show_statistics"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/show_stats"/>


</androidx.appcompat.widget.LinearLayoutCompat>